# mc-manager

./: .gitignore  Cargo.toml  push_release.sh
scripts/: commit-release.bat  mc-install.bat  mc-update.bat
src/: api.rs  instances.rs  main.rs  properties.rs  server.rs  state.rs  utils.rs  warp_utils.rs
static/: index.html  script.js  style.css
