[package]
name = "mc-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-str = "0.5.4"
serde = { version = "1.0.160", features = ['derive', 'serde_derive'] }
static_dir = "0.2.0"
tokio = { version = "1.27.0", features = ['macros', 'rt-multi-thread'] }
warp = { version = "0.3.4", features = ['compression', 'compression-brotli', 'compression-gzip'] }
